--- a/frontend/src/components/feed/Feed.css
+++ b/frontend/src/components/feed/Feed.css
@@ -32,6 +32,7 @@
   #like-button {
     background-color: rgba(11, 115, 227, 0.702);
     color: white;
+    font-weight: bold;
     padding: 5px 10px;
     border-radius: 5px;
     border: none;
