--- a/frontend/src/components/post/Post.css
+++ b/frontend/src/components/post/Post.css
@@ -1,7 +1,9 @@
 #comment-button{
     background-color: rgba(11, 115, 227, 0.702);
     color: white;
-    padding: 2px;
+    font-weight: bold;
+    padding: 5px 8px;
+    margin: 5px;
     border-radius: 5px;
     border: none;
     cursor: pointer;
