--- a/frontend/src/components/home/Home.css
+++ b/frontend/src/components/home/Home.css
@@ -14,7 +14,7 @@
 }
 
 #sign-up {
-  background-color: rgba(11, 115, 227, 0.702);
+  background-color: black;
   color: white;
   padding: 5px;
   font-weight: bold;
@@ -26,7 +26,7 @@
 }
 
 #login {
-  background-color: rgba(11, 115, 227, 0.702);
+  background-color: black;
   color: white;
   padding: 5px;
   font-weight: bold;
